--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -30,4 +30,4 @@ jobs:
         run: |
           python .github/scripts/community-contribution-label.py
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
