--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -2,11 +2,10 @@ name: Community Contribution Label
 
 on:
     workflow_call:
-      inputs:
+      secrets:
         GITHUB_TOKEN:
           description: 'GitHub token'
           required: true
-          type: string
 
 jobs:
   label:
