--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -2,11 +2,11 @@ name: Community Contribution Label
 
 on:
     workflow_call:
-      secrets:
+      inputs:
         GITHUB_TOKEN:
           description: 'GitHub token'
           required: true
-
+          type: string
 jobs:
   label:
     runs-on: ubuntu-latest
@@ -29,4 +29,4 @@ jobs:
         run: |
           python .github/scripts/community-contribution-label.py
         env:
-          GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
