--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -5,7 +5,7 @@ on:
       inputs:
         GITHUB_TOKEN:
           description: 'GitHub token'
-          required: true
+          required: false
           type: string
 jobs:
   label:
