--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -5,7 +5,7 @@ on:
       inputs:
         GITHUB_TOKEN:
           description: 'GitHub token'
-          required: false
+          required: true
           type: string
 jobs:
   label:
@@ -29,4 +29,4 @@ jobs:
         run: |
           python .github/scripts/community-contribution-label.py
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
