--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -3,7 +3,7 @@ name: Community Contribution Label
 on:
     workflow_call:
       inputs:
-        GITHUB_TOKEN:
+        github_token:
           description: 'GitHub token'
           required: true
           type: string
@@ -29,4 +29,4 @@ jobs:
         run: |
           python .github/scripts/community-contribution-label.py
         env:
-          GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ inputs.github_token }}
