--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+            repository: iamshobhraj/.github
+            token: ${{ inputs.github_token }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
