--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
             repository: iamshobhraj/.github
-            token: ${{ inputs.github_token }}
+            token: ${{ github.token }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
