--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -29,7 +29,6 @@ jobs:
           pip install requests
 
       - name: Add/Remove Community Contribution Label
-        run: |
-          python .github/scripts/community-contribution-label.py
+        run: python .github/scripts/community-contribution-label.py
         env:
           GITHUB_TOKEN: ${{ inputs.github_token }}
