--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
             repository: iamshobhraj/.github
-            token: ${{ github.token }}
+            path: .github-repo
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -29,6 +29,6 @@ jobs:
           pip install requests
 
       - name: Add/Remove Community Contribution Label
-        run: python .github/scripts/community-contribution-label.py
+        run: python .github-repo/scripts/community-contribution-label.py
         env:
           GITHUB_TOKEN: ${{ inputs.github_token }}
