--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -3,7 +3,8 @@ name: Community Contribution Label
 on:
     workflow_call:
       secrets:
-          gh_token: ${{ secrets.git_token }}
+          token:
+            required: true
 jobs:
   reusable-job:
     runs-on: ubuntu-latest
@@ -28,4 +29,4 @@ jobs:
       - name: Add/Remove Community Contribution Label
         run: python .github-repo/scripts/community-contribution-label.py
         env:
-          token: ${{ gh_token }}
+          token: ${{ secrets.token }}
