--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -30,3 +30,4 @@ jobs:
         run: python .github-repo/scripts/community-contribution-label.py
         env:
           token: ${{ secrets.token }}
+          GITHUB_EVENT_PATH: ${{ github.event_path }}
