--- a/.github/workflows/community-contribution-label.yml
+++ b/.github/workflows/community-contribution-label.yml
@@ -10,6 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - name: Check event context
+        run: |
+            if [[ "${{ github.event_name }}" != "issues" ]] || [[ "${{ github.event.action }}" != "assigned" && "${{ github.event.action }}" != "unassigned" ]]; then
+            echo "This workflow should only run on issue assigned/unassigned events"
+            exit 1
+            fi
+
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -30,3 +38,4 @@ jobs:
         run: python .github-repo/scripts/community-contribution-label.py
         env:
           token: ${{ secrets.token }}
+          GITHUB_EVENT_PATH: ${{ github.event_path }}
